exports[`prefer-array-flat > invalid(1): Array.prototype.concat.apply([], array) 1`] = `

  1 | Array.prototype.concat.apply([], array)

`;

exports[`prefer-array-flat > invalid(1): Array.prototype.concat.apply([], array) 2`] = `

Message:
> 1 | Array.prototype.concat.apply([], array)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(1): [].concat(...array) 1`] = `

  1 | [].concat(...array)

`;

exports[`prefer-array-flat > invalid(1): [].concat(...array) 2`] = `

Message:
> 1 | [].concat(...array)
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(1): [].concat.apply([], array) 1`] = `

  1 | [].concat.apply([], array)

`;

exports[`prefer-array-flat > invalid(1): [].concat.apply([], array) 2`] = `

Message:
> 1 | [].concat.apply([], array)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(1): _.flatten(array) 1`] = `

  1 | _.flatten(array)

`;

exports[`prefer-array-flat > invalid(1): _.flatten(array) 2`] = `

Message:
> 1 | _.flatten(array)
    | ^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`_.flatten()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(1): array.flatMap(x => x) 1`] = `

  1 | array.flatMap(x => x)

`;

exports[`prefer-array-flat > invalid(1): array.flatMap(x => x) 2`] = `

Message:
> 1 | array.flatMap(x => x)
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#flatMap()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(1): array.reduce((a, b) => a.concat(b), []) 1`] = `

  1 | array.reduce((a, b) => a.concat(b), [])

`;

exports[`prefer-array-flat > invalid(1): array.reduce((a, b) => a.concat(b), []) 2`] = `

Message:
> 1 | array.reduce((a, b) => a.concat(b), [])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#reduce()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(1): before()\nArray.prototype.concat.apply([], [array].concat(array)) 1`] = `

  1 | before()
  2 | Array.prototype.concat.apply([], [array].concat(array))

`;

exports[`prefer-array-flat > invalid(1): before()\nArray.prototype.concat.apply([], [array].concat(array)) 2`] = `

Message:
  1 | before()
> 2 | Array.prototype.concat.apply([], [array].concat(array))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | before()
  2 | ;[array].concat(array).flat()

`;

exports[`prefer-array-flat > invalid(1): flat(array) 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | flat(array)

`;

exports[`prefer-array-flat > invalid(1): flat(array) 2`] = `

Message:
> 1 | flat(array)
    | ^^^^^^^^^^^ Prefer \`Array#flat()\` over \`flat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(1): flat1(x) 1`] = `

Options:
- functions:
    - ''
    - ' '
    - ' flat1 '
    - 'utils..flat2'
    - 'utils . flat3'
    - 'utils.fl at4'
    - 'utils.flat5  '
    - '  utils.flat6'

Code:
  1 | flat1(x)

`;

exports[`prefer-array-flat > invalid(1): flat1(x) 2`] = `

Message:
> 1 | flat1(x)
    | ^^^^^^^^ Prefer \`Array#flat()\` over \`flat1()\` to flatten an array.

Output:
  1 | x.flat()

`;

exports[`prefer-array-flat > invalid(10): Array.prototype.concat.call([], ...[[foo]]) 1`] = `

  1 | Array.prototype.concat.call([], ...[[foo]])

`;

exports[`prefer-array-flat > invalid(10): Array.prototype.concat.call([], ...[[foo]]) 2`] = `

Message:
> 1 | Array.prototype.concat.call([], ...[[foo]])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [[foo]].flat()

`;

exports[`prefer-array-flat > invalid(10): [].concat.call([], ...[[foo]]) 1`] = `

  1 | [].concat.call([], ...[[foo]])

`;

exports[`prefer-array-flat > invalid(10): [].concat.call([], ...[[foo]]) 2`] = `

Message:
> 1 | [].concat.call([], ...[[foo]])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [[foo]].flat()

`;

exports[`prefer-array-flat > invalid(11): function foo(){return[].concat.call([], ...array)} 1`] = `

  1 | function foo(){return[].concat.call([], ...array)}

`;

exports[`prefer-array-flat > invalid(11): function foo(){return[].concat.call([], ...array)} 2`] = `

Message:
> 1 | function foo(){return[].concat.call([], ...array)}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | function foo(){return array.flat()}

`;

exports[`prefer-array-flat > invalid(2): Array.prototype.concat.apply([], ((0, array))) 1`] = `

  1 | Array.prototype.concat.apply([], ((0, array)))

`;

exports[`prefer-array-flat > invalid(2): Array.prototype.concat.apply([], ((0, array))) 2`] = `

Message:
> 1 | Array.prototype.concat.apply([], ((0, array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((0, array)).flat()

`;

exports[`prefer-array-flat > invalid(2): Array.prototype.concat.apply([], (0, array)) 1`] = `

  1 | Array.prototype.concat.apply([], (0, array))

`;

exports[`prefer-array-flat > invalid(2): Array.prototype.concat.apply([], (0, array)) 2`] = `

Message:
> 1 | Array.prototype.concat.apply([], (0, array))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | (0, array).flat()

`;

exports[`prefer-array-flat > invalid(2): [].concat(...(( array ))) 1`] = `

  1 | [].concat(...(( array )))

`;

exports[`prefer-array-flat > invalid(2): [].concat(...(( array ))) 2`] = `

Message:
> 1 | [].concat(...(( array )))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.

Output:
  1 | (( array )).flat()

`;

exports[`prefer-array-flat > invalid(2): [].concat.apply([], ((0, array))) 1`] = `

  1 | [].concat.apply([], ((0, array)))

`;

exports[`prefer-array-flat > invalid(2): [].concat.apply([], ((0, array))) 2`] = `

Message:
> 1 | [].concat.apply([], ((0, array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((0, array)).flat()

`;

exports[`prefer-array-flat > invalid(2): array?.flatMap(x => x) 1`] = `

  1 | array?.flatMap(x => x)

`;

exports[`prefer-array-flat > invalid(2): array?.flatMap(x => x) 2`] = `

Message:
> 1 | array?.flatMap(x => x)
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#flatMap()\` to flatten an array.

Output:
  1 | array?.flat()

`;

exports[`prefer-array-flat > invalid(2): array?.reduce((a, b) => a.concat(b), []) 1`] = `

  1 | array?.reduce((a, b) => a.concat(b), [])

`;

exports[`prefer-array-flat > invalid(2): array?.reduce((a, b) => a.concat(b), []) 2`] = `

Message:
> 1 | array?.reduce((a, b) => a.concat(b), [])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#reduce()\` to flatten an array.

Output:
  1 | array?.flat()

`;

exports[`prefer-array-flat > invalid(2): flat(array,) 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | flat(array,)

`;

exports[`prefer-array-flat > invalid(2): flat(array,) 2`] = `

Message:
> 1 | flat(array,)
    | ^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`flat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(2): lodash.flatten(array) 1`] = `

  1 | lodash.flatten(array)

`;

exports[`prefer-array-flat > invalid(2): lodash.flatten(array) 2`] = `

Message:
> 1 | lodash.flatten(array)
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`lodash.flatten()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(2): utils.flat5(x) 1`] = `

Options:
- functions:
    - ''
    - ' '
    - ' flat1 '
    - 'utils..flat2'
    - 'utils . flat3'
    - 'utils.fl at4'
    - 'utils.flat5  '
    - '  utils.flat6'

Code:
  1 | utils.flat5(x)

`;

exports[`prefer-array-flat > invalid(2): utils.flat5(x) 2`] = `

Message:
> 1 | utils.flat5(x)
    | ^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`utils.flat5()\` to flatten an array.

Output:
  1 | x.flat()

`;

exports[`prefer-array-flat > invalid(3): Array.prototype.concat.apply([], ((array))) 1`] = `

  1 | Array.prototype.concat.apply([], ((array)))

`;

exports[`prefer-array-flat > invalid(3): Array.prototype.concat.apply([], ((array))) 2`] = `

Message:
> 1 | Array.prototype.concat.apply([], ((array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((array)).flat()

`;

exports[`prefer-array-flat > invalid(3): [].concat(...(( [foo] ))) 1`] = `

  1 | [].concat(...(( [foo] )))

`;

exports[`prefer-array-flat > invalid(3): [].concat(...(( [foo] ))) 2`] = `

Message:
> 1 | [].concat(...(( [foo] )))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.

Output:
  1 | (( [foo] )).flat()

`;

exports[`prefer-array-flat > invalid(3): [].concat.apply([], ((array))) 1`] = `

  1 | [].concat.apply([], ((array)))

`;

exports[`prefer-array-flat > invalid(3): [].concat.apply([], ((array))) 2`] = `

Message:
> 1 | [].concat.apply([], ((array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((array)).flat()

`;

exports[`prefer-array-flat > invalid(3): _.flatten((0, array)) 1`] = `

  1 | _.flatten((0, array))

`;

exports[`prefer-array-flat > invalid(3): _.flatten((0, array)) 2`] = `

Message:
> 1 | _.flatten((0, array))
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`_.flatten()\` to flatten an array.

Output:
  1 | (0, array).flat()

`;

exports[`prefer-array-flat > invalid(3): function foo(){return[].flatMap(x => x)} 1`] = `

  1 | function foo(){return[].flatMap(x => x)}

`;

exports[`prefer-array-flat > invalid(3): function foo(){return[].flatMap(x => x)} 2`] = `

Message:
> 1 | function foo(){return[].flatMap(x => x)}
    |                      ^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#flatMap()\` to flatten an array.

Output:
  1 | function foo(){return [].flat()}

`;

exports[`prefer-array-flat > invalid(3): function foo(){return[].reduce((a, b) => a.concat(b), [])} 1`] = `

  1 | function foo(){return[].reduce((a, b) => a.concat(b), [])}

`;

exports[`prefer-array-flat > invalid(3): function foo(){return[].reduce((a, b) => a.concat(b), [])} 2`] = `

Message:
> 1 | function foo(){return[].reduce((a, b) => a.concat(b), [])}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#reduce()\` to flatten an array.

Output:
  1 | function foo(){return [].flat()}

`;

exports[`prefer-array-flat > invalid(3): underscore.flatten(array) 1`] = `

  1 | underscore.flatten(array)

`;

exports[`prefer-array-flat > invalid(3): underscore.flatten(array) 2`] = `

Message:
> 1 | underscore.flatten(array)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`underscore.flatten()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(3): utils.flat(array) 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | utils.flat(array)

`;

exports[`prefer-array-flat > invalid(3): utils.flat(array) 2`] = `

Message:
> 1 | utils.flat(array)
    | ^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`utils.flat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(3): utils.flat6(x) 1`] = `

Options:
- functions:
    - ''
    - ' '
    - ' flat1 '
    - 'utils..flat2'
    - 'utils . flat3'
    - 'utils.fl at4'
    - 'utils.flat5  '
    - '  utils.flat6'

Code:
  1 | utils.flat6(x)

`;

exports[`prefer-array-flat > invalid(3): utils.flat6(x) 2`] = `

Message:
> 1 | utils.flat6(x)
    | ^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`utils.flat6()\` to flatten an array.

Output:
  1 | x.flat()

`;

exports[`prefer-array-flat > invalid(4): Array.prototype.concat.apply([], [foo]) 1`] = `

  1 | Array.prototype.concat.apply([], [foo])

`;

exports[`prefer-array-flat > invalid(4): Array.prototype.concat.apply([], [foo]) 2`] = `

Message:
> 1 | Array.prototype.concat.apply([], [foo])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [foo].flat()

`;

exports[`prefer-array-flat > invalid(4): [].concat(...(( [[foo]] ))) 1`] = `

  1 | [].concat(...(( [[foo]] )))

`;

exports[`prefer-array-flat > invalid(4): [].concat(...(( [[foo]] ))) 2`] = `

Message:
> 1 | [].concat(...(( [[foo]] )))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.

Output:
  1 | (( [[foo]] )).flat()

`;

exports[`prefer-array-flat > invalid(4): [].concat.apply([], [foo]) 1`] = `

  1 | [].concat.apply([], [foo])

`;

exports[`prefer-array-flat > invalid(4): [].concat.apply([], [foo]) 2`] = `

Message:
> 1 | [].concat.apply([], [foo])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [foo].flat()

`;

exports[`prefer-array-flat > invalid(4): async function a() { return _.flatten(await getArray()); } 1`] = `

  1 | async function a() { return _.flatten(await getArray()); }

`;

exports[`prefer-array-flat > invalid(4): async function a() { return _.flatten(await getArray()); } 2`] = `

Message:
> 1 | async function a() { return _.flatten(await getArray()); }
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`_.flatten()\` to flatten an array.

Output:
  1 | async function a() { return (await getArray()).flat(); }

`;

exports[`prefer-array-flat > invalid(4): foo.flatMap(x => x)instanceof Array 1`] = `

  1 | foo.flatMap(x => x)instanceof Array

`;

exports[`prefer-array-flat > invalid(4): foo.flatMap(x => x)instanceof Array 2`] = `

Message:
> 1 | foo.flatMap(x => x)instanceof Array
    | ^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#flatMap()\` to flatten an array.

Output:
  1 | foo.flat() instanceof Array

`;

exports[`prefer-array-flat > invalid(4): function foo(){return[]?.reduce((a, b) => a.concat(b), [])} 1`] = `

  1 | function foo(){return[]?.reduce((a, b) => a.concat(b), [])}

`;

exports[`prefer-array-flat > invalid(4): function foo(){return[]?.reduce((a, b) => a.concat(b), [])} 2`] = `

Message:
> 1 | function foo(){return[]?.reduce((a, b) => a.concat(b), [])}
    |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#reduce()\` to flatten an array.

Output:
  1 | function foo(){return []?.flat()}

`;

exports[`prefer-array-flat > invalid(4): globalThis.lodash.flatten(array) 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | globalThis.lodash.flatten(array)

`;

exports[`prefer-array-flat > invalid(4): globalThis.lodash.flatten(array) 2`] = `

Message:
> 1 | globalThis.lodash.flatten(array)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`globalThis.lodash.flatten()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(5): Array.prototype.concat.apply([], [[foo]]) 1`] = `

  1 | Array.prototype.concat.apply([], [[foo]])

`;

exports[`prefer-array-flat > invalid(5): Array.prototype.concat.apply([], [[foo]]) 2`] = `

Message:
> 1 | Array.prototype.concat.apply([], [[foo]])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [[foo]].flat()

`;

exports[`prefer-array-flat > invalid(5): [].concat.apply([], [[foo]]) 1`] = `

  1 | [].concat.apply([], [[foo]])

`;

exports[`prefer-array-flat > invalid(5): [].concat.apply([], [[foo]]) 2`] = `

Message:
> 1 | [].concat.apply([], [[foo]])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [[foo]].flat()

`;

exports[`prefer-array-flat > invalid(5): async function a() { return _.flatten((await getArray())); } 1`] = `

  1 | async function a() { return _.flatten((await getArray())); }

`;

exports[`prefer-array-flat > invalid(5): async function a() { return _.flatten((await getArray())); } 2`] = `

Message:
> 1 | async function a() { return _.flatten((await getArray())); }
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`_.flatten()\` to flatten an array.

Output:
  1 | async function a() { return (await getArray()).flat(); }

`;

exports[`prefer-array-flat > invalid(5): flat(array).map(array => utils.flat(array)) 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | flat(array).map(array => utils.flat(array))

`;

exports[`prefer-array-flat > invalid(5): flat(array).map(array => utils.flat(array)) 2`] = `

Message:
> 1 | flat(array).map(array => utils.flat(array))
    | ^^^^^^^^^^^ Prefer \`Array#flat()\` over \`flat()\` to flatten an array.

Output:
  1 | array.flat().map(array => utils.flat(array))

`;

exports[`prefer-array-flat > invalid(5): flat(array).map(array => utils.flat(array)) 3`] = `

Message:
> 1 | flat(array).map(array => utils.flat(array))
    |                          ^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`utils.flat()\` to flatten an array.

Output:
  1 | flat(array).map(array => array.flat())

`;

exports[`prefer-array-flat > invalid(5): function f(foo: number[][]) { foo.reduce((a, b) => a.concat(b), []); } 1`] = `

  1 | function f(foo: number[][]) { foo.reduce((a, b) => a.concat(b), []); }

`;

exports[`prefer-array-flat > invalid(5): function f(foo: number[][]) { foo.reduce((a, b) => a.concat(b), []); } 2`] = `

Message:
> 1 | function f(foo: number[][]) { foo.reduce((a, b) => a.concat(b), []); }
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array#reduce()\` to flatten an array.

Output:
  1 | function f(foo: number[][]) { foo.flat(); }

`;

exports[`prefer-array-flat > invalid(5): function foo(){return[].concat(...array)} 1`] = `

  1 | function foo(){return[].concat(...array)}

`;

exports[`prefer-array-flat > invalid(5): function foo(){return[].concat(...array)} 2`] = `

Message:
> 1 | function foo(){return[].concat(...array)}
    |                      ^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.

Output:
  1 | function foo(){return array.flat()}

`;

exports[`prefer-array-flat > invalid(6): Array.prototype.concat.call([], ...array) 1`] = `

  1 | Array.prototype.concat.call([], ...array)

`;

exports[`prefer-array-flat > invalid(6): Array.prototype.concat.call([], ...array) 2`] = `

Message:
> 1 | Array.prototype.concat.call([], ...array)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(6): [].concat.call([], ...array) 1`] = `

  1 | [].concat.call([], ...array)

`;

exports[`prefer-array-flat > invalid(6): [].concat.call([], ...array) 2`] = `

Message:
> 1 | [].concat.call([], ...array)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(6): class A extends[].concat(...array){} 1`] = `

  1 | class A extends[].concat(...array){}

`;

exports[`prefer-array-flat > invalid(6): class A extends[].concat(...array){} 2`] = `

Message:
> 1 | class A extends[].concat(...array){}
    |                ^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.

Output:
  1 | class A extends array.flat(){}

`;

exports[`prefer-array-flat > invalid(6): import {flatten as flat} from 'lodash-es';\nconst foo = flat(bar); 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | import {flatten as flat} from 'lodash-es';
  2 | const foo = flat(bar);

`;

exports[`prefer-array-flat > invalid(6): import {flatten as flat} from 'lodash-es';\nconst foo = flat(bar); 2`] = `

Message:
  1 | import {flatten as flat} from 'lodash-es';
> 2 | const foo = flat(bar);
    |             ^^^^^^^^^ Prefer \`Array#flat()\` over \`flat()\` to flatten an array.

Output:
  1 | import {flatten as flat} from 'lodash-es';
  2 | const foo = bar.flat();

`;

exports[`prefer-array-flat > invalid(7): Array.prototype.concat.call([], ...((0, array))) 1`] = `

  1 | Array.prototype.concat.call([], ...((0, array)))

`;

exports[`prefer-array-flat > invalid(7): Array.prototype.concat.call([], ...((0, array))) 2`] = `

Message:
> 1 | Array.prototype.concat.call([], ...((0, array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((0, array)).flat()

`;

exports[`prefer-array-flat > invalid(7): [].concat.call([], ...((0, array))) 1`] = `

  1 | [].concat.call([], ...((0, array)))

`;

exports[`prefer-array-flat > invalid(7): [].concat.call([], ...((0, array))) 2`] = `

Message:
> 1 | [].concat.call([], ...((0, array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((0, array)).flat()

`;

exports[`prefer-array-flat > invalid(7): _.flatten(array).length 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | _.flatten(array).length

`;

exports[`prefer-array-flat > invalid(7): _.flatten(array).length 2`] = `

Message:
> 1 | _.flatten(array).length
    | ^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`_.flatten()\` to flatten an array.

Output:
  1 | array.flat().length

`;

exports[`prefer-array-flat > invalid(7): const A = class extends[].concat(...array){} 1`] = `

  1 | const A = class extends[].concat(...array){}

`;

exports[`prefer-array-flat > invalid(7): const A = class extends[].concat(...array){} 2`] = `

Message:
> 1 | const A = class extends[].concat(...array){}
    |                        ^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`[].concat()\` to flatten an array.

Output:
  1 | const A = class extends array.flat(){}

`;

exports[`prefer-array-flat > invalid(8): Array.prototype.concat.apply([], array) 1`] = `

Options:
- functions:
    - 'flat'
    - 'utils.flat'
    - 'globalThis.lodash.flatten'

Code:
  1 | Array.prototype.concat.apply([], array)

`;

exports[`prefer-array-flat > invalid(8): Array.prototype.concat.apply([], array) 2`] = `

Message:
> 1 | Array.prototype.concat.apply([], array)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | array.flat()

`;

exports[`prefer-array-flat > invalid(8): Array.prototype.concat.call([], ...((array))) 1`] = `

  1 | Array.prototype.concat.call([], ...((array)))

`;

exports[`prefer-array-flat > invalid(8): Array.prototype.concat.call([], ...((array))) 2`] = `

Message:
> 1 | Array.prototype.concat.call([], ...((array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((array)).flat()

`;

exports[`prefer-array-flat > invalid(8): [].concat.call([], ...((array))) 1`] = `

  1 | [].concat.call([], ...((array)))

`;

exports[`prefer-array-flat > invalid(8): [].concat.call([], ...((array))) 2`] = `

Message:
> 1 | [].concat.call([], ...((array)))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | ((array)).flat()

`;

exports[`prefer-array-flat > invalid(9): Array.prototype.concat.call([], ...[foo]) 1`] = `

  1 | Array.prototype.concat.call([], ...[foo])

`;

exports[`prefer-array-flat > invalid(9): Array.prototype.concat.call([], ...[foo]) 2`] = `

Message:
> 1 | Array.prototype.concat.call([], ...[foo])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [foo].flat()

`;

exports[`prefer-array-flat > invalid(9): [].concat.call([], ...[foo]) 1`] = `

  1 | [].concat.call([], ...[foo])

`;

exports[`prefer-array-flat > invalid(9): [].concat.call([], ...[foo]) 2`] = `

Message:
> 1 | [].concat.call([], ...[foo])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`Array#flat()\` over \`Array.prototype.concat()\` to flatten an array.

Output:
  1 | [foo].flat()

`;
